--- a/css/login.css
+++ b/css/login.css
@@ -12,15 +12,20 @@ h1{
     text-align: center;
     padding: 5px;
 }
-div{
-    width: 400px;
+.container{
+    display: flex;
+    width: 100%;
+    height:100vh;
+    align-items: center;
+    justify-content: center;
+}
+.container .form{
+    width: 450px;
+    height: 300px;
     border: 2px solid rgb(12, 12, 12) ;
     background-image:linear-gradient(90deg,rgb(77, 70, 76),rgb(108, 114, 116),rgb(151, 151, 143),rgb(185, 185, 183),rgb(177, 182, 175),rgb(155, 156, 161));
     box-shadow: 5px 10px 30px rgb(127, 133, 127) ;
-    text-align: center;
-    padding: 50px;
-    margin-top: 100px;
-    margin-left: 500px;
+    text-align: center;   
     border-radius: 20px;
 }
 input{
@@ -37,4 +42,17 @@ button{
     background-color: rgb(94, 102, 96);
     box-shadow: 5px 5px 10px rgb(47, 49, 47) ;
     border-radius: 5px;
+}
+#singup{
+    height: 450px;
+}
+@media screen and (max-width:450px){
+    .container .form{
+        width: 300px;       
+    }    
+}
+@media screen and (max-width:330px){
+    .container .form{
+        width: 250px;       
+    }   
 }
